Swagger completed
